.provarCaches/00D6C0000000xA6UAI/objects/Territory__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MALatitude__c</fullName>
        <label>Latitude (MapAnything)</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MALongitude__c</fullName>
        <label>Longitude (MapAnything)</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
                <value>
                    <fullName>LTP/AQ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Director__c</fullName>
        <formula>Owner:User.Manager.Manager_Name__c</formula>
        <label>Sales Director</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Manager__c</fullName>
        <formula>Owner:User.Manager_Name__c</formula>
        <label>Sales Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Coupon_Code__c</fullName>
        <label>Territory Coupon Code</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Description__c</fullName>
        <label>Territory Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Territory_Name__c</fullName>
        <label>Territory Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Territory_Owner_Role__c</fullName>
        <formula>Owner:User.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_State__c</fullName>
        <label>Territory_State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Type__c</fullName>
        <label>Territory Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Region__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>HY</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Territory</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Territory_Name__c</columns>
        <columns>Sales_Director__c</columns>
        <columns>Sales_Manager__c</columns>
        <columns>Active__c</columns>
        <columns>MALatitude__c</columns>
        <columns>MALongitude__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Territory_Type__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Territory</fullName>
        <columns>NAME</columns>
        <columns>Territory_Name__c</columns>
        <columns>Territory_Type__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Territory</label>
    </listViews>
    <nameField>
        <label>Territory Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territories</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>